Bug 445568 - Toolbar icons are blurry at default 32*32
Summary: Toolbar icons are blurry at default 32*32
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2.3
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-16 08:20 UTC by strangequark
Modified: 2022-09-22 21:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.0
Sentry Crash Report:


Attachments
Blurry icons with artifacts (1.93 KB, image/png)
2021-11-16 08:20 UTC, strangequark
Details

Note You need to log in before you can comment on or make changes to this bug.
Description strangequark 2021-11-16 08:20:26 UTC
Created attachment 143612 [details]
Blurry icons with artifacts

SUMMARY
The icons for Start, Stop, etc, in the toolbar are blurry and have artifacts at the default icon size 32*32, with display scaling at 112.5 (if the scaling matters).


STEPS TO REPRODUCE
1. Open Kronometer, enable the Start/Stop toolbar

 RESULT
The icons are blurry

EXPECTED RESULT
The icons shouldn't be blurry

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.23
KDE Plasma Version: 5.23.3
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3
Graphics Processor: Mesa Intel® HD Graphics 620

ADDITIONAL INFORMATION
none
Comment 1 Elvis Angelaccio 2022-09-22 21:25:37 UTC
Git commit 484507f6bddefa83fc10407898947a5bd33a9768 by Elvis Angelaccio.
Committed on 22/09/2022 at 20:49.
Pushed by elvisangelaccio into branch 'master'.

Enable HiDpi support
FIXED-IN: 2.3.0

M  +2    -0    src/main.cpp

https://invent.kde.org/utilities/kronometer/commit/484507f6bddefa83fc10407898947a5bd33a9768