Enable HiDpi support

BUG: 445568
FIXED-IN: 2.3.0