src/main.cpp
@@ -21,6 +21,8 @@ int main (int argc, char **argv)
 {
     KLocalizedString::setApplicationDomain("kronometer");
 
+    QCoreApplication::setAttribute(Qt::AA_UseHighDpiPixmaps, true);
+    QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling, true);
     QApplication app {argc, argv};
 
     KCrash::initialize();
